# src/docs/openapi.yaml
@@ -34,6 +34,12 @@ paths:
   /auth/admin/login:
     $ref: "./auth.yaml#/paths/~1auth~1admin~1login"
 
+  /auth/logout:
+    $ref: "./auth.yaml#/paths/~1auth~1logout"
+  
+  /auth/me:
+    $ref: "./auth.yaml#/paths/~1auth~1me"
+
   # 🏠 APARTMENTS
   /apartments:
     $ref: "./apartments.yaml#/paths/~1apartments"
